# slive_core

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: danmaku_mask_test.dart  danmaku_test.dart  detect_platform_test.dart  extractor_test.dart  log_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  (+1 more)
ios/: slive_core.podspec
lib/: slive_core.dart  slive_core_compat.dart
lib/src/: compat.dart  slive_danmaku.dart  slive_factory.dart  slive_site.dart
linux/: CMakeLists.txt
macos/: slive_core.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: danmaku.rs  extractor.rs  log.rs  mod.rs  simple.rs  types.rs
rust/src/api/models/: live_anchor_item.rs  live_category.rs  live_category_result.rs  live_danmu_control_event.rs  live_danmu_item.rs  live_mask_config.rs  live_mask_stats.rs  live_message.rs  live_message_color.rs  live_message_type.rs  live_play_quality.rs  live_play_url.rs  live_room_detail.rs  live_room_item.rs  live_search_anchor_result.rs  live_search_room_result.rs  live_sub_category.rs  live_super_chat_message.rs  mod.rs
test/: type_test.dart
windows/: CMakeLists.txt
(+45 files in other folders)
