[package]
name = "slive_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
platforms-parser = { git = "https://github.com/SlotSun/slive-core-api-rust.git" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
flutter_logger = "0.6.1"

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
